# yao

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: config.yaml  deployment.yaml  registry.yaml  secret.yaml  secrets.yaml
yao/: main.py  settings.py
yao/cogs/: elcondor.py  legacy.py
